--- a/src/Makefile
+++ b/src/Makefile
@@ -3,9 +3,9 @@
 # The only one that needs changing is the assembler 
 # rule, as we use nasm instead of GNU as.
 
-SOURCES=boot.o main.o
+SOURCES=boot.o main.o monitor.o common.o
 
-CFLAGS=-nostdlib -nostdinc -fno-builtin -fno-stack-protector
+CFLAGS=-nostdlib -nostdinc -fno-builtin -fno-stack-protector -I./include
 LDFLAGS=-Tlinker.ld
 ASFLAGS=-felf
 
